# babilonia

./: .gitignore  Cargo.toml  DESIGN.md  JOIN-CONSTRUCTION.md  README.md
.cargo/: config.toml
basic-wallet/: Cargo.toml
basic-wallet/src/: lib.rs
basic-wallet/tests/: wallet.rs
docs/: BIP324-PATCH-NOTES.md  DEPLOYMENT.md  DESIGN.md  JOIN-CONSTRUCTION.md  MESSAGES.md  PI-A-NOTES.md  PROTOCOL.md
patches/: bip324-decoy.patch
scripts/: build-patched-node.sh
src/: agent.rs  bet.rs  chain.rs  game.rs  keys.rs  lib.rs  messages.rs  musig.rs  node.rs  params.rs  persist.rs  pi_a.rs  proofs.rs  protocol.rs  recover.rs  regtest.rs  repl.rs  reveal.rs  setup.rs  sigma.rs  thimbles.rs  txgraph.rs  wallet.rs
src/transport/: bip324.rs  memory.rs  mod.rs
tests/: agent.rs  bet_basic_wallet.rs  bip324.rs  game.rs  recover.rs  regtest_e2e.rs
