[package]
name = "babilonia"
version = "0.0.1"
edition = "2021"
description = "OP_RAND-emulation lottery-as-mix: single-anchor pot, decoupled adaptor reveal, delta-split keypath settlement (L2 core)"
publish = false

[dependencies]
# Crypto: MuSig2 (BIP327) + Schnorr adaptor signatures. `musig2` re-exports the `secp` crate
# (Point/Scalar with inversion — the reveal's t^-1) and secp256k1 0.31 as its backend.
musig2 = { version = "0.4", features = ["rand"] }
# Same `secp` crate musig2 re-exports; declared directly to turn on scalar inversion
# (`secp256k1-invert`) — the reveal's t^-1. Features unify across the shared instance.
secp = { version = "0.7", features = ["secp256k1", "secp256k1-invert"] }
secp256k1 = { version = "0.31", features = ["std", "rand"] }
# Bitcoin tx construction / taproot (its own secp256k1 0.29; byte boundary). Core to the protocol
# (building the join/settlement txs), so unconditional — not part of the `node` feature.
bitcoin = { version = "0.32", features = ["rand-std", "serde"] }
rand = "0.8"
thiserror = "2"
hex = "0.4"
sha2 = "0.10"
# Node-only: driving a (patched) bitcoind over RPC. Gated behind the `node` feature so a builder
# shipping a lighter Transport doesn't inherit them.
bitcoincore-rpc = { version = "0.19", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["node"]
# `node`: the regtest harness + the BIP324 covert transport, both of which drive a local bitcoind
# over RPC. Builders who implement their own `Transport` (rendezvous, Nostr, Tor, …) can build with
# `default-features = false` to get the transport-agnostic core library with no RPC dependencies.
node = ["dep:bitcoincore-rpc", "dep:serde_json"]

[dev-dependencies]
# Integration tests are separate crates and can't see the lib's normal deps; re-declare the two
# needed to build protocol secrets in the BIP324 handshake test. Versions unify with the deps above.
musig2 = { version = "0.4", features = ["rand"] }
secp256k1 = { version = "0.31", features = ["std", "rand"] }
