[workspace]
members = ["basic-wallet"]
resolver = "2"

[package]
name = "babilonia"
version = "0.0.1"
edition = "2021"
description = "OP_RAND-emulation lottery-as-mix: single-anchor pot, decoupled adaptor reveal, delta-split keypath settlement (L2 core)"
publish = false

[dependencies]
# Crypto: MuSig2 (BIP327) + Schnorr adaptor signatures. `musig2` re-exports the `secp` crate
# (Point/Scalar with inversion — the reveal's t^-1) and secp256k1 0.31 as its backend.
musig2 = { version = "0.4", features = ["rand", "serde"] }
# Same `secp` crate musig2 re-exports; declared directly to turn on scalar inversion
# (`secp256k1-invert`) — the reveal's t^-1. Features unify across the shared instance.
secp = { version = "0.7", features = ["secp256k1", "secp256k1-invert", "serde"] }
secp256k1 = { version = "0.31", features = ["std", "rand", "serde"] }
# Bitcoin tx construction / taproot (its own secp256k1 0.29; byte boundary). Core to the protocol
# (building the join/settlement txs), so unconditional — not part of the `node` feature.
bitcoin = { version = "0.32", features = ["rand-std", "serde", "base64"] }
rand = "0.8"
thiserror = "2"
hex = "0.4"
sha2 = "0.10"
# Node-only: driving a (patched) bitcoind over RPC. Gated behind the `node` feature so a builder
# shipping a lighter Transport doesn't inherit them.
bitcoincore-rpc = { version = "0.19", optional = true }
# Persistence: crash-recoverable bet records (serde → JSON). Unconditional — the bet layer persists
# state regardless of the node feature. secp/musig2/secp256k1/bitcoin all expose serde.
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
# CLI REPL (default `Ui`): rustyline for line editing, history, and its external-printer (so async
# events print cleanly above the prompt). Gated behind `repl` so a builder shipping their own UI
# (GUI, …) doesn't inherit it.
rustyline = { version = "14", optional = true }
# The reference wallet backend (BDK). Optional: babilonia adapts its `BasicWallet` to the `Wallet`
# trait; a consumer using their own wallet leaves this off. (basic-wallet has no babilonia dep.)
basic-wallet = { path = "basic-wallet", optional = true }
# pi_a (research, feature-gated + off by default): arkworks secp256k1 scalar field + Poseidon, toward
# the π_a hash-circuit ZKP. Bulletproofs backend = the Curve Trees generic arkworks R1CS (Campanelli
# et al., USENIX Sec '23), which supports the secp256k1/secq256k1 cycle — pinned to arkworks 0.4.
ark-ff = { version = "0.4", optional = true }
ark-ec = { version = "0.4", optional = true }
ark-secp256k1 = { version = "0.4", optional = true }
ark-std = { version = "0.4", optional = true }
ark-serialize = { version = "0.4", optional = true }
bulletproofs = { git = "https://github.com/simonkamp/curve-trees", default-features = false, features = ["std"], optional = true }
merlin = { version = "2", default-features = false, optional = true }

[features]
default = ["node", "repl"]
# `repl`: the default CLI `Ui` (`repl::Repl`), built on rustyline. Off = ship your own `Ui`.
repl = ["dep:rustyline"]
# `basic-wallet`: adapt the reference BDK wallet to the `Wallet` trait. Needs `node` (shares the RPC
# chain/transport). Off = bring your own `Wallet` impl.
basic-wallet = ["dep:basic-wallet", "node"]
# `pi_a`: the hash-circuit ZKP *implementation* (Bulletproofs+Poseidon over secp256k1). The π_a
# *interface* (`pi_a::{Statement,Witness,Proof,pad,prove,verify}`) is always compiled; this feature
# swaps in the real hash-circuit proof (and Poseidon `pad`) behind it. Off = Σ-part + SHA-256 pad.
pi_a = ["dep:ark-ff", "dep:ark-ec", "dep:ark-secp256k1", "dep:ark-std", "dep:ark-serialize", "dep:bulletproofs", "dep:merlin"]
# `node`: the regtest harness + the BIP324 covert transport, both of which drive a local bitcoind
# over RPC. Builders who implement their own `Transport` (rendezvous, Nostr, Tor, …) can build with
# `default-features = false` to get the transport-agnostic core library with no RPC dependencies.
node = ["dep:bitcoincore-rpc"]

[[bin]]
name = "regtest-game"
path = "src/bin/regtest_game.rs"
required-features = ["node"]

[[bin]]
name = "party"
path = "src/bin/party.rs"
required-features = ["node"]

[[bin]]
name = "babilonia-node"
path = "src/bin/babilonia_node.rs"
required-features = ["node", "repl"]

[dev-dependencies]
# Integration tests are separate crates and can't see the lib's normal deps; re-declare the two
# needed to build protocol secrets in the BIP324 handshake test. Versions unify with the deps above.
musig2 = { version = "0.4", features = ["rand", "serde"] }
secp256k1 = { version = "0.31", features = ["std", "rand", "serde"] }
